@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.1.15-cur, done by cs@nop.
--;-;-;2022-01-15 19:44:29, took 00:06:39, with 100 workers, on 2634 cases, 0 failed, 0 traces, 2 retries
+-;-;-;2022-01-15 20:26:39, took 00:06:07, with 100 workers, on 2638 cases, 0 failed, 0 traces, 3 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -417,6 +417,10 @@ http://sources.nop.hu/cfg/crypt-access03.tst;crypt-access03.tst;success;access p
 http://sources.nop.hu/cfg/crypt-access04.tst;crypt-access04.tst;success;access subnet
 http://sources.nop.hu/cfg/crypt-access05.tst;crypt-access05.tst;success;remote triggered blackhole access
 http://sources.nop.hu/cfg/crypt-access06.tst;crypt-access06.tst;success;remote triggered whitelist access
+http://sources.nop.hu/cfg/crypt-access07.tst;crypt-access07.tst;success;access total
+http://sources.nop.hu/cfg/crypt-access08.tst;crypt-access08.tst;success;access tracker
+http://sources.nop.hu/cfg/crypt-access09.tst;crypt-access09.tst;success;access negated tracker
+http://sources.nop.hu/cfg/crypt-access10.tst;crypt-access10.tst;success;access follow tracker
 http://sources.nop.hu/cfg/crypt-acl01.tst;crypt-acl01.tst;success;ingress protocol matching access list
 http://sources.nop.hu/cfg/crypt-acl02.tst;crypt-acl02.tst;success;egress protocol matching access list
 http://sources.nop.hu/cfg/crypt-acl03.tst;crypt-acl03.tst;success;ingress destination matching access list
