@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.1.15-cur, done by cs@nop.<br/>
-tested: 2022-01-15 19:44:29, took 00:06:39, with 100 workers, on 2634 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2022-01-15 20:26:39, took 00:06:07, with 100 workers, on 2638 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -430,6 +430,10 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-access04.tst">crypt-access04.tst</a></td><td>success</td><td>access subnet</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-access05.tst">crypt-access05.tst</a></td><td>success</td><td>remote triggered blackhole access</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-access06.tst">crypt-access06.tst</a></td><td>success</td><td>remote triggered whitelist access</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/crypt-access07.tst">crypt-access07.tst</a></td><td>success</td><td>access total</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/crypt-access08.tst">crypt-access08.tst</a></td><td>success</td><td>access tracker</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/crypt-access09.tst">crypt-access09.tst</a></td><td>success</td><td>access negated tracker</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/crypt-access10.tst">crypt-access10.tst</a></td><td>success</td><td>access follow tracker</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-acl01.tst">crypt-acl01.tst</a></td><td>success</td><td>ingress protocol matching access list</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-acl02.tst">crypt-acl02.tst</a></td><td>success</td><td>egress protocol matching access list</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-acl03.tst">crypt-acl03.tst</a></td><td>success</td><td>ingress destination matching access list</td></tr>
